--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,35 @@
-<html>
-
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>American/British English Translator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <h1>American / British English Translator</h1>
+    </header>
+    <hr style="margin: 25px">
+    <div class="container">
+      <div class="form-container">
+        <form action="/api/translate" method="post" id="translate-form"></form>
+        <textarea rows="10" cols="60" id="text-input"></textarea>
+        <br>
+        <select id="locale-select" name="locale-select">
+          <option value="american-to-british">American to British</option>
+          <option value="british-to-american">British to American</option>
+        </select>
+        <button type="submit" id="translate-btn">Translate</button>
+      </div>
+      <div id="output-container">
+        <div id="solution-container">
+          Translated Sentence:
+          <div id="translated-sentence"> </div>
+          <div id="error-msg"> </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="javascripts/index.js"> </script>
 </html>
