--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>American/British English Translator</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="stylesheets/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -31,5 +31,5 @@
       </div>
     </div>
   </body>
-  <script src="javascripts/index.js"> </script>
+  <script type="module" src="javascripts/index.js"> </script>
 </html>
